# LoadedDice

./: CMakeLists.txt  README.md
source/: CMakeLists.txt  Dice.cpp  Dice.h  Main.cpp  ReadDiceConfiguration.cpp  ReadDiceConfiguration.h
